# wilbito_autodev_skeleton

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.txt  APPLY_INSTRUCTIONS.txt  CHANGELOG.md  FixSeedCheck-AndRun.ps1  Invoke-Autodev.ps1  README.md  V3_README_ADDENDUM.md  check_runs_schema.py  commands.json  mypy.ini  pre_release_check.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  rollback.json  ruff.toml  run_wilbito.ps1  wb.ps1
.github/workflows/: lint.yml
artifacts/: version.json
artifacts/codegen/: calc.py  demo.py
backup/20250901_160310/: commands.json
backup/20250901_180914/: commands.json
config/: agents.yaml  checklist_autodev.yaml  checklist_patrones.yaml  checklist_patterns.yaml  checklist_quality.yaml  checklist_setup.yaml  commands.autodev.json  commands.json  rollback.json  seeds.json
config/pipelines/: pipeline_autodesarrollo.yaml  pipeline_trading.yaml
docs/: plan.md  preguntas_maestras.json
memoria/: vectorstore.py
memoria/db/: wilbito.db
memoria/vector_db/backups/: vectorstore_20250831210624.json  vectorstore_20250901011930.json
memoria/vectorstore/: index.pkl
scripts/: run_api.ps1  run_autodev.ps1  run_cli.ps1
src/wilbito.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agents_basic.py  test_calc.py  test_council.py  test_demo.py  test_eventbus.py  test_imports.py  test_loop_parser.py
tools/: autodev_loop.py  db_migrate.py  noop.py  quality_wrapper.py  seed_check.py
wilbito-env/: pyvenv.cfg
wilbito-env/Scripts/: activate  activate.bat
(+63 files in other folders)
